alignment issues fixed

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -1,11 +1,8 @@
 .calculator{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 10px 0;
-    position: absolute;
-    top: 30;
-    right: 30;
+    align-items: flex-end;
+    
 }
 
 .calculator-screen{
