--- a/css/time.css
+++ b/css/time.css
@@ -11,7 +11,7 @@
 .ana_clock{
     position: absolute;
     top: 30%;
-    left: 30%;
+    left: 50%;
     transform: translate(-50%,0);
     width: 300px;
     height: 300px;
